--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -18,4 +18,11 @@
     width: 100%;
     background-color: #ffa500;
     border: 0;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-text{
+    margin-right: 10px;
 }
