--- a/src/component/Bazar/Bazar.css
+++ b/src/component/Bazar/Bazar.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin: 30px 0;
+    position: relative;
     
 }
 
@@ -17,5 +18,7 @@
   background-color: #282c3441;
   padding-left: 20px;
   border-radius: 10px;
-  height: 400px;
+  height: 500px;
+  position: sticky;
+  top: 0;
 }
