--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -19,6 +19,7 @@
     background-color: #ffa500;
     border: 0;
     font-size: 15px;
+    font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: center;
