--- a/src/component/Blog/Blog.css
+++ b/src/component/Blog/Blog.css
@@ -19,7 +19,7 @@
     border-radius: 5px;
     margin: 20px;
     background-color: white;
-    padding: 10px;
+    padding: 15px;
     font-size: 18px;
     font-weight: 600;
     text-align: justify;
@@ -28,4 +28,11 @@
 
 .blog-text h3{
     text-align: center;
+}
+
+
+@media screen and (max-width:500px) {
+    .blog{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
